# hanasu

./: .gitignore  LICENSE  README.md  SECURITY.md  docs.md  install.sh  pyproject.toml
hanasu/: __init__.py  __main__.py  config.py  docs.md  hotkey.py  injector.py  logging_config.py  main.py  menubar.py  recorder.py  transcriber.py  updater.py
scripts/: docs.md  install.sh  uninstall.sh
tests/: docs.md  test_config.py  test_hotkey.py  test_injector.py  test_logging_config.py  test_main.py  test_menubar.py  test_recorder.py  test_transcriber.py  test_updater.py
